# retroboard-starter

./: .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/migrations/: env.py  script.py.mako
apps/api/app/db/migrations/versions/: 0001_create_users.py
apps/api/app/models/: __init__.py  user.py
apps/api/app/tests/: test_health.py
apps/api/myenv/: pyvenv.cfg
apps/api/myenv/Scripts/: activate  activate.bat
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: layout.tsx  page.tsx
infra/scripts/: dev.ps1
